gBSL/src/BSLParser.cpp

// Generated from d:\cpp\AddInNative\gBSL\BSLParser.g4 by ANTLR 4.8


#include "BSLParserListener.h"

#include "BSLParser.h"


using namespace antlrcpp;
using namespace antlr4;

BSLParser::BSLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

BSLParser::~BSLParser() {
  delete _interpreter;
}

std::string BSLParser::getGrammarFileName() const {
  return "BSLParser.g4";
}

const std::vector<std::string>& BSLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& BSLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

BSLParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

BSLParser::FileCodeBlockContext* BSLParser::FileContext::fileCodeBlock() {
  return getRuleContext<BSLParser::FileCodeBlockContext>(0);
}

tree::TerminalNode* BSLParser::FileContext::EOF() {
  return getToken(BSLParser::EOF, 0);
}

BSLParser::ShebangContext* BSLParser::FileContext::shebang() {
  return getRuleContext<BSLParser::ShebangContext>(0);
}

std::vector<BSLParser::PreprocessorContext *> BSLParser::FileContext::preprocessor() {
  return getRuleContexts<BSLParser::PreprocessorContext>();
}

BSLParser::PreprocessorContext* BSLParser::FileContext::preprocessor(size_t i) {
  return getRuleContext<BSLParser::PreprocessorContext>(i);
}

BSLParser::ModuleVarsContext* BSLParser::FileContext::moduleVars() {
  return getRuleContext<BSLParser::ModuleVarsContext>(0);
}

BSLParser::FileCodeBlockBeforeSubContext* BSLParser::FileContext::fileCodeBlockBeforeSub() {
  return getRuleContext<BSLParser::FileCodeBlockBeforeSubContext>(0);
}

BSLParser::SubsContext* BSLParser::FileContext::subs() {
  return getRuleContext<BSLParser::SubsContext>(0);
}


size_t BSLParser::FileContext::getRuleIndex() const {
  return BSLParser::RuleFile;
}

void BSLParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void BSLParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

BSLParser::FileContext* BSLParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, BSLParser::RuleFile);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(203);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(202);
      shebang();
      break;
    }

    }
    setState(208);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(205);
        preprocessor(); 
      }
      setState(210);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(212);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(211);
      moduleVars();
      break;
    }

    }
    setState(217);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(214);
        preprocessor(); 
      }
      setState(219);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
    setState(223);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(220);
      fileCodeBlockBeforeSub();
      setState(221);
      subs();
      break;
    }

    }
    setState(225);
    fileCodeBlock();
    setState(226);
    match(BSLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShebangContext ------------------------------------------------------------------

BSLParser::ShebangContext::ShebangContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::ShebangContext::HASH() {
  return getToken(BSLParser::HASH, 0);
}

tree::TerminalNode* BSLParser::ShebangContext::PREPROC_EXCLAMATION_MARK() {
  return getToken(BSLParser::PREPROC_EXCLAMATION_MARK, 0);
}

std::vector<tree::TerminalNode *> BSLParser::ShebangContext::PREPROC_ANY() {
  return getTokens(BSLParser::PREPROC_ANY);
}

tree::TerminalNode* BSLParser::ShebangContext::PREPROC_ANY(size_t i) {
  return getToken(BSLParser::PREPROC_ANY, i);
}

std::vector<tree::TerminalNode *> BSLParser::ShebangContext::PREPROC_IDENTIFIER() {
  return getTokens(BSLParser::PREPROC_IDENTIFIER);
}

tree::TerminalNode* BSLParser::ShebangContext::PREPROC_IDENTIFIER(size_t i) {
  return getToken(BSLParser::PREPROC_IDENTIFIER, i);
}


size_t BSLParser::ShebangContext::getRuleIndex() const {
  return BSLParser::RuleShebang;
}

void BSLParser::ShebangContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShebang(this);
}

void BSLParser::ShebangContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShebang(this);
}

BSLParser::ShebangContext* BSLParser::shebang() {
  ShebangContext *_localctx = _tracker.createInstance<ShebangContext>(_ctx, getState());
  enterRule(_localctx, 2, BSLParser::RuleShebang);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(228);
    match(BSLParser::HASH);
    setState(229);
    match(BSLParser::PREPROC_EXCLAMATION_MARK);
    setState(233);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BSLParser::PREPROC_IDENTIFIER

    || _la == BSLParser::PREPROC_ANY) {
      setState(230);
      _la = _input->LA(1);
      if (!(_la == BSLParser::PREPROC_IDENTIFIER

      || _la == BSLParser::PREPROC_ANY)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(235);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UsedLibContext ------------------------------------------------------------------

BSLParser::UsedLibContext::UsedLibContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::UsedLibContext::PREPROC_STRING() {
  return getToken(BSLParser::PREPROC_STRING, 0);
}

tree::TerminalNode* BSLParser::UsedLibContext::PREPROC_IDENTIFIER() {
  return getToken(BSLParser::PREPROC_IDENTIFIER, 0);
}


size_t BSLParser::UsedLibContext::getRuleIndex() const {
  return BSLParser::RuleUsedLib;
}

void BSLParser::UsedLibContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUsedLib(this);
}

void BSLParser::UsedLibContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUsedLib(this);
}

BSLParser::UsedLibContext* BSLParser::usedLib() {
  UsedLibContext *_localctx = _tracker.createInstance<UsedLibContext>(_ctx, getState());
  enterRule(_localctx, 4, BSLParser::RuleUsedLib);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(236);
    _la = _input->LA(1);
    if (!(_la == BSLParser::PREPROC_STRING

    || _la == BSLParser::PREPROC_IDENTIFIER)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UseContext ------------------------------------------------------------------

BSLParser::UseContext::UseContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::UseContext::PREPROC_USE_KEYWORD() {
  return getToken(BSLParser::PREPROC_USE_KEYWORD, 0);
}

BSLParser::UsedLibContext* BSLParser::UseContext::usedLib() {
  return getRuleContext<BSLParser::UsedLibContext>(0);
}


size_t BSLParser::UseContext::getRuleIndex() const {
  return BSLParser::RuleUse;
}

void BSLParser::UseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUse(this);
}

void BSLParser::UseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUse(this);
}

BSLParser::UseContext* BSLParser::use() {
  UseContext *_localctx = _tracker.createInstance<UseContext>(_ctx, getState());
  enterRule(_localctx, 6, BSLParser::RuleUse);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(238);
    match(BSLParser::PREPROC_USE_KEYWORD);
    setState(239);
    usedLib();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RegionStartContext ------------------------------------------------------------------

BSLParser::RegionStartContext::RegionStartContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::RegionStartContext::PREPROC_REGION() {
  return getToken(BSLParser::PREPROC_REGION, 0);
}

BSLParser::RegionNameContext* BSLParser::RegionStartContext::regionName() {
  return getRuleContext<BSLParser::RegionNameContext>(0);
}


size_t BSLParser::RegionStartContext::getRuleIndex() const {
  return BSLParser::RuleRegionStart;
}

void BSLParser::RegionStartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRegionStart(this);
}

void BSLParser::RegionStartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRegionStart(this);
}

BSLParser::RegionStartContext* BSLParser::regionStart() {
  RegionStartContext *_localctx = _tracker.createInstance<RegionStartContext>(_ctx, getState());
  enterRule(_localctx, 8, BSLParser::RuleRegionStart);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(241);
    match(BSLParser::PREPROC_REGION);
    setState(242);
    regionName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RegionEndContext ------------------------------------------------------------------

BSLParser::RegionEndContext::RegionEndContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::RegionEndContext::PREPROC_END_REGION() {
  return getToken(BSLParser::PREPROC_END_REGION, 0);
}


size_t BSLParser::RegionEndContext::getRuleIndex() const {
  return BSLParser::RuleRegionEnd;
}

void BSLParser::RegionEndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRegionEnd(this);
}

void BSLParser::RegionEndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRegionEnd(this);
}

BSLParser::RegionEndContext* BSLParser::regionEnd() {
  RegionEndContext *_localctx = _tracker.createInstance<RegionEndContext>(_ctx, getState());
  enterRule(_localctx, 10, BSLParser::RuleRegionEnd);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(244);
    match(BSLParser::PREPROC_END_REGION);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RegionNameContext ------------------------------------------------------------------

BSLParser::RegionNameContext::RegionNameContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::RegionNameContext::PREPROC_IDENTIFIER() {
  return getToken(BSLParser::PREPROC_IDENTIFIER, 0);
}


size_t BSLParser::RegionNameContext::getRuleIndex() const {
  return BSLParser::RuleRegionName;
}

void BSLParser::RegionNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRegionName(this);
}

void BSLParser::RegionNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRegionName(this);
}

BSLParser::RegionNameContext* BSLParser::regionName() {
  RegionNameContext *_localctx = _tracker.createInstance<RegionNameContext>(_ctx, getState());
  enterRule(_localctx, 12, BSLParser::RuleRegionName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(246);
    match(BSLParser::PREPROC_IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Preproc_ifContext ------------------------------------------------------------------

BSLParser::Preproc_ifContext::Preproc_ifContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::Preproc_ifContext::PREPROC_IF_KEYWORD() {
  return getToken(BSLParser::PREPROC_IF_KEYWORD, 0);
}

BSLParser::Preproc_expressionContext* BSLParser::Preproc_ifContext::preproc_expression() {
  return getRuleContext<BSLParser::Preproc_expressionContext>(0);
}

tree::TerminalNode* BSLParser::Preproc_ifContext::PREPROC_THEN_KEYWORD() {
  return getToken(BSLParser::PREPROC_THEN_KEYWORD, 0);
}


size_t BSLParser::Preproc_ifContext::getRuleIndex() const {
  return BSLParser::RulePreproc_if;
}

void BSLParser::Preproc_ifContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreproc_if(this);
}

void BSLParser::Preproc_ifContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreproc_if(this);
}

BSLParser::Preproc_ifContext* BSLParser::preproc_if() {
  Preproc_ifContext *_localctx = _tracker.createInstance<Preproc_ifContext>(_ctx, getState());
  enterRule(_localctx, 14, BSLParser::RulePreproc_if);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(248);
    match(BSLParser::PREPROC_IF_KEYWORD);
    setState(249);
    preproc_expression();
    setState(250);
    match(BSLParser::PREPROC_THEN_KEYWORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Preproc_elsifContext ------------------------------------------------------------------

BSLParser::Preproc_elsifContext::Preproc_elsifContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::Preproc_elsifContext::PREPROC_ELSIF_KEYWORD() {
  return getToken(BSLParser::PREPROC_ELSIF_KEYWORD, 0);
}

BSLParser::Preproc_expressionContext* BSLParser::Preproc_elsifContext::preproc_expression() {
  return getRuleContext<BSLParser::Preproc_expressionContext>(0);
}

tree::TerminalNode* BSLParser::Preproc_elsifContext::PREPROC_THEN_KEYWORD() {
  return getToken(BSLParser::PREPROC_THEN_KEYWORD, 0);
}


size_t BSLParser::Preproc_elsifContext::getRuleIndex() const {
  return BSLParser::RulePreproc_elsif;
}

void BSLParser::Preproc_elsifContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreproc_elsif(this);
}

void BSLParser::Preproc_elsifContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreproc_elsif(this);
}

BSLParser::Preproc_elsifContext* BSLParser::preproc_elsif() {
  Preproc_elsifContext *_localctx = _tracker.createInstance<Preproc_elsifContext>(_ctx, getState());
  enterRule(_localctx, 16, BSLParser::RulePreproc_elsif);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(252);
    match(BSLParser::PREPROC_ELSIF_KEYWORD);
    setState(253);
    preproc_expression();
    setState(254);
    match(BSLParser::PREPROC_THEN_KEYWORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Preproc_elseContext ------------------------------------------------------------------

BSLParser::Preproc_elseContext::Preproc_elseContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::Preproc_elseContext::PREPROC_ELSE_KEYWORD() {
  return getToken(BSLParser::PREPROC_ELSE_KEYWORD, 0);
}


size_t BSLParser::Preproc_elseContext::getRuleIndex() const {
  return BSLParser::RulePreproc_else;
}

void BSLParser::Preproc_elseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreproc_else(this);
}

void BSLParser::Preproc_elseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BSLParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreproc_else(this);
}

BSLParser::Preproc_elseContext* BSLParser::preproc_else() {
  Preproc_elseContext *_localctx = _tracker.createInstance<Preproc_elseContext>(_ctx, getState());
  enterRule(_localctx, 18, BSLParser::RulePreproc_else);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(256);
    match(BSLParser::PREPROC_ELSE_KEYWORD);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Preproc_endifContext ------------------------------------------------------------------

BSLParser::Preproc_endifContext::Preproc_endifContext(ParserRuleContext *parent, size_t invokingState)
  : antlr4::ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BSLParser::Preproc_endifContext::PREPROC_ENDIF_KEYWORD() {
  return getToken(BSLParser::PREPROC_ENDIF_KEYWORD, 0);
}

